--- a/register.html
+++ b/register.html
@@ -51,7 +51,14 @@
           autocomplete="nope"
           required
         />
-        <input type="text" placeholder="Address" autocomplete="nope" required />
+        <input
+          type="text"
+          placeholder="House No"
+          autocomplete="nope"
+          required
+        />
+        <input type="text" placeholder="City" autocomplete="nope" required />
+        <input type="text" placeholder="State" autocomplete="nope" required />
         <br />
         <button>Submit</button>
         <br /><br />
