--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             autocomplete="nope"
             required
           />
-          <button>Search</button>
+          <button><a href="./dogs.html">Search</a></button>
         </form>
       </div>
       <h1 class="contact">
