--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="headbutton">
         <button class="redir">Home</button>
         <button class="redir">About</button>
-        <button class="redir">Services</button>
+        <button class="redir"><a href="./vet.html">Services</a></button>
       </div>
       <div class="search">
         <h1>Blood donor search</h1>
