--- a/dogs.html
+++ b/dogs.html
@@ -24,28 +24,28 @@
         <span>
           <tr>
             <td>01</td>
-            <td>Kenneth</td>
-            <td>Labrador</td>
+            <td>Owner Name</td>
+            <td>Dog Breed</td>
             <td>Doggy Style AB+ve</td>
-            <td>9048242069</td>
+            <td>7902550372</td>
           </tr>
         </span>
         <span>
           <tr>
             <td>01</td>
-            <td>Kenneth</td>
-            <td>Labrador</td>
+            <td>Owner Name</td>
+            <td>Dog Breed</td>
             <td>Doggy Style AB+ve</td>
-            <td>9048242069</td>
+            <td>7902550372</td>
           </tr>
         </span>
         <span>
           <tr>
             <td>01</td>
-            <td>Kenneth</td>
-            <td>Labrador</td>
+            <td>Owner Name</td>
+            <td>Dog Breed</td>
             <td>Doggy Style AB+ve</td>
-            <td>9048242069</td>
+            <td>7902550372</td>
           </tr>
         </span>
       </table>
