--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
         </form>
       </div>
       <h1 class="contact">
-        Contact Us:
-        <a href="https://www.adithyan.co" target="_blank">Adithya</a>
+        <button>Contact Us</button>
       </h1>
     </div>
   </body>
