--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
       <h1 class="contact">
         Contact Us:
-        <a href="#" target="_blank">Adithya & Team</a>
+        <a href="mailto:adithyachandran.kvt@gmail.com" target="_blank">Adithya & Team</a>
       </h1>
     </div>
   </body>
