--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <button class="register"><a href="./register.html">Register</a></button>
       <div class="headbutton">
         <button class="redir">Home</button>
-        <button class="redir">About</button>
+        <button class="redir"><a href="./about.html">About</a></button>
         <button class="redir"><a href="./vet.html">Services</a></button>
       </div>
       <div class="search">
@@ -38,7 +38,9 @@
       </div>
       <h1 class="contact">
         Contact Us:
-        <a href="mailto:adithyachandran.kvt@gmail.com" target="_blank">Adithya & Team</a>
+        <a href="mailto:adithyachandran.kvt@gmail.com" target="_blank"
+          >Adithya & Team</a
+        >
       </h1>
     </div>
   </body>
