--- a/about.html
+++ b/about.html
@@ -12,7 +12,9 @@
     <div class="bodydiv">
       <h1 class="maintitle">Hands for Paws</h1>
       <div class="break"></div>
+      <h1>About</h1>
       <p>Hello World</p>
+      <button><a href="./index.html">Back</a></button>
     </div>
   </body>
 </html>
