--- a/index.html
+++ b/index.html
@@ -36,12 +36,13 @@
           <button><a href="./dogs.html">Search</a></button>
         </form>
       </div>
-      <h1 class="contact">
-        Contact Us:
+      <button class="contact">
         <a href="mailto:adithyachandran.kvt@gmail.com" target="_blank"
-          >Adithya & Team</a
+          >
+        Contact Us
+        </a
         >
-      </h1>
+      </button>
     </div>
   </body>
 </html>
