--- a/vet.html
+++ b/vet.html
@@ -13,10 +13,10 @@
     <div class="bodydiv">
       <h1 class="maintitle">Hands for Paws</h1>
       <div class="break"></div>
-      <p>Vet Hospitals</p>
-      <p>Training Centers</p>
-      <p>Rescue Centers</p>
-      <p>Adoption Centers</p>
+      <button>Vet Hospitals</button>
+      <button>Training Centers</button>
+      <button>Rescue Centers</button>
+      <button>Adoption Centers</button>
       <button><a href="./index.html">Back</a></button>
     </div>
   </body>
