--- a/index.html
+++ b/index.html
@@ -36,12 +36,10 @@
           <button><a href="./dogs.html">Search</a></button>
         </form>
       </div>
-      <button class="contact">
-        <a href="mailto:adithyachandran.kvt@gmail.com" target="_blank"
-          >
-        Contact Us
-        </a
-        >
+      <button class="redir contact">
+        <a href="mailto:adithyachandran.kvr@gmail.com" target="_blank">
+          Contact Us
+        </a>
       </button>
     </div>
   </body>
