--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
       <h1 class="maintitle">Hands for Paws</h1>
       <div class="break"></div>
       <h1>About</h1>
-      <p>Hello World</p>
+      <p>This is an initiative to help and support the life of dogs.</p>
       <button><a href="./index.html">Back</a></button>
     </div>
   </body>
