--- a/about.html
+++ b/about.html
@@ -12,8 +12,9 @@
     <div class="bodydiv">
       <h1 class="maintitle">Hands for Paws</h1>
       <div class="break"></div>
-      <h1>About</h1>
-      <p>This is an initiative to help and support the life of dogs.</p>
+      <div class="para"><h1>About</h1>
+      <p>There is no dearth of facilities and data available to find donors for human blood transfusions today, with various platforms making it easy to find donors within minutes. For dogs on the other hand, the scope of finding donors for canine blood transfusions is still difficult. It is rather a bitter fact that there are only few animal blood banks available throughout India.
+        When a dog requires blood transfusion, it is always a situation of emergency. The first roadblock a pet parent hits is non-availability of animal blood banks and this is when they scramble to find a suitable donor within their network. Most often, finding the right donor animal is a challenge because the donor has to meet certain criteria such as age, weight and be healthy and free of infectious diseases, along with a few other parameters that are assessed through deep screening at the clinic. During an emergency, time is the biggest factor and the animal in critical condition could be running out of it. It’s not always necessary that every pet parent will find the right donor animal through their network. Often a pet parent could be new to the city and their chances of finding the right donor are reduced drastically. In some exceptional cases, it’s a double whammy when blood samples from multiple donor animals are screened to cross match a certain blood type. Hands For Paws acts like a bridge connecting the animal in immediate need of blood with the animals that are ready and eligible to donate blood.</p></div>
       <button><a href="./index.html">Back</a></button>
     </div>
   </body>
