--- a/vet.html
+++ b/vet.html
@@ -13,9 +13,9 @@
     <div class="bodydiv">
       <h1 class="maintitle">Hands for Paws</h1>
       <div class="break"></div>
-      <button>Vet Hospitals</button>
-      <button>Training Centers</button>
-      <button>Rescue Centers</button>
+      <button><a href="./vh.html">Vet Hospitals</a></button>
+      <button><a href="./tc.html">Training Centers</a></button>
+      <button><a href="./rc.html">Rescue Centers</a></button>
       <button>Adoption Centers</button>
       <button><a href="./index.html">Back</a></button>
     </div>
