--- a/rc.html
+++ b/rc.html
@@ -16,7 +16,7 @@
       <table class="w3-table w3-striped w3-bordered">
         <tr>
           <th>S.No</th>
-          <th>Training Centre</th>
+          <th>Rescue Centre</th>
           <th>Place</th>
           <th>Contact</th>
         </tr>
