--- a/dogs.html
+++ b/dogs.html
@@ -24,28 +24,28 @@
         <span>
           <tr>
             <td>01</td>
-            <td>Owner Name</td>
-            <td>Dog Breed</td>
-            <td>Doggy Style AB+ve</td>
+            <td>KIRAN</td>
+            <td>PUG</td>
+            <td> DEA-1.1</td>
             <td>7902550372</td>
           </tr>
         </span>
         <span>
           <tr>
-            <td>01</td>
-            <td>Owner Name</td>
-            <td>Dog Breed</td>
-            <td>Doggy Style AB+ve</td>
-            <td>7902550372</td>
+            <td>02</td>
+            <td>ASWANTH</td>
+            <td>POMERENIAN</td>
+            <td>DEA-1.3</td>
+            <td>7958550382</td>
           </tr>
         </span>
         <span>
           <tr>
-            <td>01</td>
-            <td>Owner Name</td>
-            <td>Dog Breed</td>
-            <td>Doggy Style AB+ve</td>
-            <td>7902550372</td>
+            <td>03</td>
+            <td>KRITHIKA</td>
+            <td>LAB</td>
+            <td>DEA-4</td>
+            <td>7902558972</td>
           </tr>
         </span>
       </table>
