--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="bodydiv">
       <h1 class="maintitle">Hands for Paws</h1>
       <div class="break"></div>
-      <button class="register"><a href="http://localhost:3000">Register</a></button>
+      <button class="register"><a href="http://192.168.229.229:3000">Register</a></button>
       <div class="headbutton">
         <button class="redir">Home</button>
         <button class="redir"><a href="./about.html">About</a></button>
